k8s/zadanie_3/manifests/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service-zad3
spec:
  type: NodePort
  selector:
    app: flask-app-zad3
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30081
