k8s/zadanie_3/manifests/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service-zad3
spec:
  selector:
    app: redis-zad3
  ports:
    - port: 6379
      targetPort: 6379
