k8s/zadanie_3/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-ingress-zad3
spec:
  ingressClassName: nginx
  rules:
    - host: flask-redis-tests.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flask-service-zad3
                port:
                  number: 80
